target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-03-02 - 10:22:55 +0000
    app.openshift.io/vcs-url: https://github.com/bdemacio1/quarkus_prj1.git
    app.quarkus.io/commit-id: c06572dc2cdd2b172bececa84c31db8075290391
    app.quarkus.io/vcs-url: https://github.com/bdemacio1/quarkus_prj1.git
  labels:
    app.kubernetes.io/name: quarkus-prj1-bd
    app.kubernetes.io/part-of: quarkus-prj1-bd-app
    app.kubernetes.io/version: "1.0"
    app: quarkus-prj1-bd
    app.openshift.io/runtime: quarkus
  name: quarkus-prj1-bd
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-prj1-bd
    app.kubernetes.io/part-of: quarkus-prj1-bd-app
    app.kubernetes.io/version: "1.0"
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-03-02 - 10:22:55 +0000
    app.openshift.io/vcs-url: https://github.com/bdemacio1/quarkus_prj1.git
    app.quarkus.io/commit-id: c06572dc2cdd2b172bececa84c31db8075290391
    app.quarkus.io/vcs-url: https://github.com/bdemacio1/quarkus_prj1.git
  labels:
    app: quarkus-prj1-bd
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: quarkus-prj1-bd
    app.kubernetes.io/part-of: quarkus-prj1-bd-app
    app.kubernetes.io/version: "1.0"
  name: quarkus-prj1-bd
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: quarkus-prj1-bd
    app.kubernetes.io/part-of: quarkus-prj1-bd-app
    app.kubernetes.io/version: "1.0"
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2021-03-02 - 10:22:55 +0000
        app.openshift.io/vcs-url: https://github.com/bdemacio1/quarkus_prj1.git
        app.quarkus.io/commit-id: c06572dc2cdd2b172bececa84c31db8075290391
        app.quarkus.io/vcs-url: https://github.com/bdemacio1/quarkus_prj1.git
      labels:
        app: quarkus-prj1-bd
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: quarkus-prj1-bd
        app.kubernetes.io/part-of: quarkus-prj1-bd-app
        app.kubernetes.io/version: "1.0"
    spec:
      containers:
      - args:
        - -jar
        - /deployments/quarkus-prj1-bd-1.0.0-SNAPSHOT-runner.jar
        - -cp
        - /deployments/lib/jakarta.el.jakarta.el-api-3.0.3.jar:/deployments/lib/jakarta.interceptor.jakarta.interceptor-api-1.2.5.jar:/deployments/lib/jakarta.enterprise.jakarta.enterprise.cdi-api-2.0.2.jar:/deployments/lib/jakarta.annotation.jakarta.annotation-api-1.3.5.jar:/deployments/lib/jakarta.transaction.jakarta.transaction-api-1.3.3.jar:/deployments/lib/org.jboss.logging.jboss-logging-3.4.1.Final.jar:/deployments/lib/io.quarkus.arc.arc-1.11.0.Final.jar:/deployments/lib/jakarta.inject.jak [...]
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        command:
        - java
        image: image-registry.openshift-image-registry.svc:5000/prsb.quarkus/quarkus-prj1-bd:1.0
        imagePullPolicy: IfNotPresent
        name: quarkus-prj1-bd
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      serviceAccount: default
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - quarkus-prj1-bd
      from:
        kind: ImageStreamTag
        name: quarkus-prj1-bd:1.0
    type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-03-02 - 10:22:55 +0000
    app.openshift.io/vcs-url: https://github.com/bdemacio1/quarkus_prj1.git
    app.quarkus.io/commit-id: c06572dc2cdd2b172bececa84c31db8075290391
    app.quarkus.io/vcs-url: https://github.com/bdemacio1/quarkus_prj1.git
  labels:
    app.kubernetes.io/name: quarkus-prj1-bd
    app.kubernetes.io/part-of: quarkus-prj1-bd-app
    app.kubernetes.io/version: "1.0"
    app: quarkus-prj1-bd
    app.openshift.io/runtime: quarkus
  name: quarkus-prj1-bd
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: quarkus-prj1-bd
